# rust-snowflake

./: Cargo.toml  dockerfile
src/: generator.rs  globals.rs  main.rs
